Fix text wrapping in plannings

--- a/app/assets/stylesheets/puzzletime.scss
+++ b/app/assets/stylesheets/puzzletime.scss
@@ -38,6 +38,9 @@ th {
 th.periodHead {
     text-align:     right;
 }
+th.nowrap {
+  white-space: nowrap;
+}
 
 #evaluation td {
 	white-space: nowrap;
